# SecureTheCloud-Brokered-Agent-Delegation-Lab

./: .gitignore  Makefile  README.md  pyproject.toml
config/: agents.yaml  apps.yaml  scopes.yaml  users.yaml
docs/: 00-sot.md  01-architecture.md  02-threat-model.md  03-token-exchange-flow.md  04-agent-capability-model.md  05-policy-decision-model.md  06-evidence-model.md  07-build-roadmap.md  08-mock-enterprise-apis.md  09-local-demo-runner.md  10-demo-walkthrough.md  11-okta-oidc-integration-plan.md  12-oauth-token-exchange-mapping.md  13-production-hardening-checklist.md  14-external-claims-validation.md
evidence/: evidence-schema.json  sample-allow-record.json  sample-deny-record.json
evidence/runs/: .gitkeep
policies/: agent_capabilities.rego  data_classification.rego  delegated_access.rego
samples/: README.md
samples/oidc/: sample-access-token-claims.json  sample-invalid-token-claims.json
samples/requests/: allow-runbook-read.json  allow-ticket-create.json
scripts/: run_demo.py  show_latest_evidence.py
services/: README.md
src/brokered_delegation/: __init__.py  config_loader.py  demo_runner.py  enterprise_api.py  evidence_review.py  identity_mapper.py  models.py  oidc_claims.py  policy_engine.py  token_broker.py
tests/: test_demo_runner.py  test_enterprise_api.py  test_evidence_review.py  test_identity_mapper.py  test_oidc_claims.py  test_plan.md  test_policy_engine.py  test_token_broker.py
