[project]
name = "securethecloud-brokered-agent-delegation-lab"
version = "0.1.0"
description = "SecureTheCloud lab for brokered agent delegation and cross-app access governance."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
